2011-01-17  Dai Sato <satodai@w3m.jp>

	* correction: ChangeLog of 2011-01-15 (0.5.2 -> 0.5.3)

2011-01-15  Dai Sato <satodai@w3m.jp>

	* w3m 0.5.3
	* version.c.in: update
	* doc/README: version 0.5.3, release date, maintainer
	* doc-jp/README: ditto
	* po/w3m.pot, ja.po: ditto
	* NEWS: update
	* configure.ac: version 0.5.3
	* configure: regenerated

2011-01-05  SAKAI Kiyotaka <kiyotaka.sakai@ntt-at.co.jp>

	* [w3m-dev 04445] Re: Update documents (README.cookie)
	* doc-jp/README.cookie: refer to RFC 2109.
	* doc/README.cookie: diito.

2011-01-05  SAKAI Kiyotaka <kiyotaka.sakai@ntt-at.co.jp>

	* [w3m-dev 04444] Re: error when 'make install'
	* w3mimg/win/.cvsignore: added.

2011-01-04  SAKAI Kiyotaka <kiyotaka.sakai@ntt-at.co.jp>

	* [w3m-dev 04441] error when 'make install'
	* update followig files. ABOUT-NLS Makefile.in acinclude.m4
	aclocal.m4 config.rpath configure configure.ac entity.h install-sh
	po/ChangeLog po/Makefile.in.in po/Rules-quot po/boldquot.sed
	po/en@boldquot.header po/en@quot.header po/insert-header.sin
	po/quot.sed po/remove-potcdate.sin

2010-12-28  Ito Hiroyuki  <ZXB01226@nifty.com>

	* [w3m-dev 04440] Update documents (README.cookie)
	* doc/README.cookie: added.
	* doc-jp/README.cookie: add document about cookie_avoid_wrong_number_of_dots.

2010-12-24  Ito Hiroyuki  <ZXB01226@nifty.com>

	* [w3m-dev 04439] Update documents (README.m17n)
	* doc-jp/README.m17n: add documents for options "east_asian_width", "gb18030_as_ucs" and "simple_preserve_space".
	* doc/README.m17n: ditto.

2010-12-24  AIDA Shinra <shinra@j10n.org>

	* [w3m-dev 04437] Re: Windows版w3mimg、他
	* w3mimg/win/win_w3mimg.cpp: remove unused ifdefs.
	(load, animate): support "-anim" option.
	(show): support "image_scale".

2010-12-20  AIDA Shinra <shinra@j10n.org>

	* [w3m-dev 04425] Re: Windows版w3mimg、他
	* w3mimgdisplay: supports Windows console (http://www.j10n.org/files/w3m-cvs-1.1040-misc.patch).
	* image.c: ditto.
	* configure.ac: ditto.
	* config.h.in: ditto.