@@ -1,5 +1,5 @@
 /* $Id$ */
-#define CURRENT_VERSION "w3m/0.5.3"
+#define CURRENT_VERSION "w3m/0.5.3+cvs"
 
 #ifndef FM_H
 char *w3m_version = CURRENT_VERSION;
