@@ -1,3 +1,7 @@
+2012-05-22  Enu <theme.of.n@gmail.com>
+
+	* file.c, HTML.c: parse META CHARSET.
+
 2011-01-17  Dai Sato <satodai@w3m.jp>
 
 	* correction: ChangeLog of 2011-01-15 (0.5.2 -> 0.5.3)
